--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
-MYSQL_HOST=localhost
-MYSQL_USERNAME=root
-MYSQL_PASSWORD=admin
-MYSQL_DATABASE=mysql
-MYSQL_PORT=3333
+MYSQL_HOST=mysql
+MYSQL_USERNAME=user
+MYSQL_PASSWORD=pass
+MYSQL_DATABASE=db
+MYSQL_ROOT_PASSWORD=pass
+MYSQL_PORT=3306
+MYSQL_LOCAL_PORT=3306
 MYSQL_SYNCHRONIZE="false"
+
 JWT_SECRET="someSecret"
+JWT_EXPIRE_TIME="1h"
+
 GOOGLE_CLIENT_ID="someId"
 GOOGLE_SECRET="someSecret"
-JWT_EXPIRE_TIME="1h"
+
+NODE_LOCAL_PORT=3000
+NODE_DOCKER_PORT=3000
