--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,42 @@
-version: '3.8'
 services:
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      - MYSQL_DATABASE=mysqldb
-      - MYSQL_ROOT_PASSWORD=admin
+  api:
+    build:
+      dockerfile: Dockerfile
+      context: .
+      # Only will build development stage from our dockerfile
+      target: development
+    env_file:
+      - .env
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    # Run in dev Mode: npm run start:dev
+    command: npm run start:dev
     ports:
-      - '3306:3306'
+      - ${NODE_LOCAL_PORT}:${NODE_DOCKER_PORT}
+    environment:
+      DB_HOST: mysql
+      DB_USER: ${MYSQL_USERNAME}
+      DB_PASSWORD: ${MYSQL_PASSWORD}
+      DB_NAME: ${MYSQL_DATABASE}
+      DB_PORT: ${MYSQL_PORT}
+      PORT: ${NODE_DOCKER_PORT}
+    depends_on:
+      - mysql
+  mysql:
+    image: mysql
+    restart: always
+    env_file:
+      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USERNAME}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+    ports:
+      - $MYSQL_LOCAL_PORT:$MYSQL_PORT
+    volumes:
+      - db:/var/lib/mysql
+
+volumes:
+  db:
