Add changes those break the app

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ JWT_SECRET="someSecret"
 GOOGLE_CLIENT_ID="someId"
 GOOGLE_SECRET="someSecret"
 JWT_EXPIRE_TIME="1h"
+SENDGRID_PASSWORD="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"
+RESET_PASSWORD_URL="http://localhost:3001/restore-password/"
