--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typeorm:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -39,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
@@ -71,7 +73,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.74.0"
   },
   "jest": {
     "moduleFileExtensions": [
